--- a/index.html
+++ b/index.html
@@ -4,51 +4,64 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="./img/WhatsApp Image 2018-09-04 at 11.47.57 AM.jpeg" type="image/x-icon">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyPotafolio</title>
 </head>
 
 <body>
-  <h1>Mi Portafolio</h1>
-  <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">Javascript</a></li>
-          <li><a href="mobile.html">Mobile</a></li>
-        </ul>
-      </div>
-    </nav>
+  <nav style="color: #AF3E52">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo"></a>
+      <a href="#" data-target="mobile-nav" class="sidenav-trigger">
+        <i class="material-icons">menu</i>
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <li>
+          <a href="#">SOBRE MÍ</a>
+        </li>
+        <li>
+          <a href="#">PROYECTOS</a>
+        </li>
+        <li>
+          <a href="#">SKILLS</a>
+        </li>
+        <li>
+          <a href="#">CONTACTO</a>
+        </li>
+      </ul>
+      <ul class="sidenav" id="mobile-nav">
+        <li>
+          <a href="#">SOBRE MÍ</a>
+        </li>
+        <li>
+          <a href="#">PROYECTOS</a>
+        </li>
+        <li>
+          <a href="#">SKILLS</a>
+        </li>
+        <li>
+          <a href="#">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-
-
-
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 
   <script>
-  $( document ).ready(function(){
-    $(".button-collapse").sideNav();
-  });
+    $(document).ready(function () {
+      $(".sidenav").sidenav();
+    });
   </script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script> -->
-  <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+
 
 </body>
 
