--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css">
   <title>MyPotafolio</title>
 </head>
 
@@ -50,12 +51,21 @@
     </div>
   </nav>
 
+  <div class="container" >
+    <div class="row" id="img">
+      <div class="col 16 m6 s12">
+        <img src="./img/Leyla Ticze.JPG" alt="leyla" class="responsive-img">
+      </div>
+    </div>
+  </div>
+
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-
   <script>
     $(document).ready(function () {
       $(".sidenav").sidenav();
