cambios en color y datos del nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>MyPotafolio</title>
+  <title>Leyla Ticze</title>
 </head>
 
 <body>
@@ -57,131 +57,113 @@
 
   <div class="main-container">
     <section id="about-me" class="portfolio-section">
-      <div class="row" id="img">
-        <h2>¿Quien Soy Yo?</h2>
-        <div class="col s12 m6 l3">
-          <img src="./img/Leyla Ticze.JPG" alt="leyla" class="responsive-img">
+      <h2 class="title-card center-align">¿Quien Soy Yo?</h2>
+      <hr class="center-align">
+      <div class="row info_me">
+        <div class="col s10 m6 l3">
+          <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img">
         </div>
+        <div class="card-panel red lighten-2 white-text">
+          <p class="center-align info">
+            Egresada de Laboratoria. Desarrolladora Front-End, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
+            aprendiendo y mejorando. Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme
+            a grupos con diversas características. Trabajo con: Javascrip, HTML, CSS, Angular.
+          </p>
+        </div>
+
       </div>
-      <p class="info">
-        Soy Front End Developer, Mi nombre es Leyla Ticze y con mis 18 años. Soy una persona con capacidad de adaptabilidada , trabajo
-        en equipo; me aventuro a los encantos del mundo tech con el objetivo de desarrollar mi multiples soluciones atravez
-        del codigo .
-      </p>
     </section>
+
     <section id="projects" class="portfolio-section">
-      <h2>proyectos</h2>
-      <div class="slider">
-        <ul class="slides">
-          <li>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/data-dashboard.png">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Data Dashboart
-                  <i class="material-icons right">more_vert</i>
-                </span>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Data Dashboart
-                  <i class="material-icons right">cerrar</i>
-                </span>
-                <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
-                <p>
-                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/haven.png">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Haven
-                  <i class="material-icons right">more_vert</i>
-                </span>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Haven
-                  <i class="material-icons right">cerrar</i>
-                </span>
-                <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
-                  , las cuales se les puede dar votos continuos .</p>
-                <p>
-                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/markdown.png">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Markdown
-                  <i class="material-icons right">more_vert</i>
-                </span>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Markdown
-                  <i class="material-icons right">cerrar</i>
-                </span>
-                <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
-                <p>
-                  <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
-                </p>
-              </div>
-            </div>
-          </li>
-        </ul>
+      <h2 class="title-card center-align">Proyectos</h2>
+      <hr class="center-align">
+      <div class="row">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="img/data-dashboard.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Data Dashboart
+              <i class="material-icons right">more_vert</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Data Dashboart
+              <i class="material-icons right">cerrar</i>
+            </span>
+            <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
+            <p>
+              <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="img/haven.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Haven
+              <i class="material-icons right">more_vert</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Haven
+              <i class="material-icons right">cerrar</i>
+            </span>
+            <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases ,
+              las cuales se les puede dar votos continuos .</p>
+            <p>
+              <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
+            </p>
+          </div>
+        </div>
+        <!-- <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="img/markdown.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Markdown
+              <i class="material-icons right">more_vert</i>
+            </span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Markdown
+              <i class="material-icons right">cerrar</i>
+            </span>
+            <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
+            <p>
+              <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
+            </p>
+          </div>
+        </div> -->
       </div>
     </section>
+
     <section id="skills" class="portfolio-section">
-      <h2>skills</h2>
+      <h2 class="title-card center-align">Skills</h2>
+      <hr class="center-align">
       <div class="container">
-        <div class="row card">
-          <div class="col s12 m6 l2">
-            <img src="img/html.png" alt="logoHTML" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/js.png" alt="logoJS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/css.png" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/bootstrap-logo.png" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/materialize.jpg" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/firebase.jpg" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/node.png" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/jest.png" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/vs-code-logo.jpg" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/git.png" alt="logoCSS" class="responsive-img card materialbox">
-          </div>
-          <div class="col s12 m6 l2">
-            <img src="img/github.jpg" alt="logoCSS" class="responsive-img card materialbox">
+        <div class="white hide-on-med-and-down">
+          <div class="col s6 m6 center-align">
+            <img src="img/html.png" alt="logoHTML" class="responsive-img imgSkills">
+            <img src="img/js.png" alt="logoJS" class="responsive-img imgSkills">
+            <img src="img/css.png" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/bootstrap-logo.png" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/materialize.jpg" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/firebase.jpg" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/node.png" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/jest.png" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/git.png" alt="logoCSS" class="responsive-img imgSkills">
+            <img src="img/github.jpg" alt="logoCSS" class="responsive-img imgSkills">
           </div>
         </div>
       </div>
+
     </section>
+
     <section id="contact" class="portfolio-section">
-      <h2>contact</h2>
+      <h2 class="title-card center-align">Contactame</h2>
+      <hr class="center-align">
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt exercitationem, numquam aliquid, facere consectetur dignissimos
         eaque quod voluptas nisi voluptates libero? Cupiditate quibusdam reprehenderit repellendus voluptatibus, tempore
@@ -189,6 +171,7 @@
       </p>
     </section>
   </div>
+
   <div class=space></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
