--- a/index.html
+++ b/index.html
@@ -56,25 +56,27 @@
   </ul>
 
   <div class="main-container">
-    <section id="about-me" class="portfolio-section">
+    <section id="about-me" class=" section scrollspy">
       <h2 class="title-card center-align">¿Quien Soy Yo?</h2>
       <hr class="center-align">
       <div class="row info_me">
         <div class="col s10 m6 l3">
-          <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img">
+          <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
         </div>
         <div class="card-panel red lighten-2 white-text">
-          <p class="center-align info">
+          <spam class="center-align info">
             Egresada de Laboratoria. Desarrolladora Front-End, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
-            aprendiendo y mejorando. Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme
-            a grupos con diversas características. Trabajo con: Javascrip, HTML, CSS, Angular.
-          </p>
+            aprendiendo y mejorando.
+            <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
+            características.
+            <br> Trabajo con: Javascrip, HTML, CSS, Angular.
+          </spam>
         </div>
-
+        <h1 class="ml12">LEYLA TICZE </h1>
       </div>
     </section>
 
-    <section id="projects" class="portfolio-section">
+    <section id="projects" class=" section scrollspy">
       <h2 class="title-card center-align">Proyectos</h2>
       <hr class="center-align">
       <div class="row">
@@ -139,7 +141,7 @@
       </div>
     </section>
 
-    <section id="skills" class="portfolio-section">
+    <section id="skills" class=" section scrollspy">
       <h2 class="title-card center-align">Skills</h2>
       <hr class="center-align">
       <div class="container">
@@ -161,7 +163,7 @@
 
     </section>
 
-    <section id="contact" class="portfolio-section">
+    <section id="contact" class=" section scrollspy">
       <h2 class="title-card center-align">Contactame</h2>
       <hr class="center-align">
       <p>
@@ -174,6 +176,7 @@
 
   <div class=space></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
