--- a/index.html
+++ b/index.html
@@ -79,65 +79,72 @@
     <section id="projects" class=" section scrollspy">
       <h2 class="title-card center-align">Proyectos</h2>
       <hr class="center-align">
-      <div class="row">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="img/data-dashboard.png">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Data Dashboart
-              <i class="material-icons right">more_vert</i>
-            </span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Data Dashboart
-              <i class="material-icons right">cerrar</i>
-            </span>
-            <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
-            <p>
-              <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="img/haven.png">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Haven
-              <i class="material-icons right">more_vert</i>
-            </span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Haven
-              <i class="material-icons right">cerrar</i>
-            </span>
-            <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases ,
-              las cuales se les puede dar votos continuos .</p>
-            <p>
-              <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
-            </p>
+      <div class="container">
+        <div class="col-s-12 col-m-4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="img/data-dashboard.png">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Data Dashboart
+                <i class="material-icons right">more_vert</i>
+              </span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Data Dashboart
+                <i class="material-icons right">cerrar</i>
+              </span>
+              <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
+              <p>
+                <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
+              </p>
+            </div>
           </div>
         </div>
-        <!-- <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="img/markdown.png">
+        <div class="col-s-12 col-m-4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="img/haven.png">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Haven
+                <i class="material-icons right">more_vert</i>
+              </span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Haven
+                <i class="material-icons right">cerrar</i>
+              </span>
+              <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
+                , las cuales se les puede dar votos continuos .</p>
+              <p>
+                <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
+              </p>
+            </div>
           </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Markdown
-              <i class="material-icons right">more_vert</i>
-            </span>
+        </div>
+        <div class="col-s-12 col-m-4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="img/markdown.png">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Markdown
+                <i class="material-icons right">more_vert</i>
+              </span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Markdown
+                <i class="material-icons right">cerrar</i>
+              </span>
+              <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
+                que contengan y reportar algunas estadísticas.</p>
+              <p>
+                <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
+              </p>
+            </div>
           </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Markdown
-              <i class="material-icons right">cerrar</i>
-            </span>
-            <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
-            <p>
-              <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
-            </p>
-          </div>
-        </div> -->
+        </div>
       </div>
     </section>
 
@@ -166,11 +173,30 @@
     <section id="contact" class=" section scrollspy">
       <h2 class="title-card center-align">Contactame</h2>
       <hr class="center-align">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt exercitationem, numquam aliquid, facere consectetur dignissimos
-        eaque quod voluptas nisi voluptates libero? Cupiditate quibusdam reprehenderit repellendus voluptatibus, tempore
-        possimus. Tenetur, consequuntur.
-      </p>
+      <div class="container ">
+        <div class="row">
+          <div class="col-s-12 col-m-4">
+            <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
+              <img src="./img/link.jpg" alt="linkdln" class="responsive-img imgSkills">
+            </a>
+          </div>
+          <div class="col-s-12 col-m-4">
+            <a href="https://github.com/ticze" target="_blank">
+              <img src="./img/github.jpg" alt="github" class="responsive-img imgSkills">
+            </a>
+          </div>
+          <div class="col-s-12 col-m-4">
+            <img src="./img/gmail.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
+            <span>l.ticze@gmail.com</span>
+          </div>
+          <div class="col-s-12 col-m-4">
+            <a href="https://drive.google.com/file/d/1utC13bOfN66PDgPLs2ESP5BrxTSveBsM/view" target="_blank">
+              Ver Curriculum-Vitae
+            <img src="./img/cv.png" alt="curriculumv-itae"  class="responsive-img imgSkills">
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 
